--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # Cadena de conexión de la base de datos
-spring.datasource.url = jdbc:mysql://localhost:3306/myresume_argprog?useSSL=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql -h bz3tkpasuhavec9oravp-mysql.services.clever-cloud.com -P 3306
 
 # Usuario y contraseña de la base datos
-spring.datasource.username = myresume-user
-spring.datasource.password = 12345678+Az
+spring.datasource.username = uvzhcd2glfgor9h0
+spring.datasource.password = LKYT0Hl7o9mQPw6M7vZo
 
 # Permite a Hibernate generar SQL optimizado
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
