--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>miportfolio</name>
 	<description>Proyecto Integrador #YoProgramo</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.runtime.version>11</java.runtime.version>
 	</properties>
 	<dependencies>
 		<dependency>
