--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Proyecto Integrador #YoProgramo</description>
 	<properties>
 		<java.runtime.version>17</java.runtime.version>
+		<maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
