--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>miportfolio</name>
 	<description>Proyecto Integrador #YoProgramo</description>
 	<properties>
-		<java.runtime.version>17</java.runtime.version>
+		<java.runtime.version>11</java.runtime.version>
 		<maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
 	</properties>
@@ -99,7 +99,18 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-
+   <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+         <configuration>
+          <skip>true</skip>
+         </configuration>
+         <executions>
+          <execution>
+           <phase>none</phase>
+          </execution>
+         </executions>  
+    </plugin>
         </plugins>
 	</build>
 
