--- a/pom.xml
+++ b/pom.xml
@@ -100,15 +100,14 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
 
-<plugin>
+  <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>2.4</version>
+            <version>3.8.1</version>
             <configuration>
-                <source>1.8</source>
-                <target>1.8</target>
-</configuration>
-</plugin>
+                <release>11</release>
+            </configuration>
+        </plugin>
         </plugins>
 	</build>
 
