--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Cadena de conexión de la base de datos
-spring.datasource.url = jdbc:mysql -h bz3tkpasuhavec9oravp-mysql.services.clever-cloud.com -P 3306
-
+#spring.datasource.url = jdbc:mysql -h bz3tkpasuhavec9oravp-mysql.services.clever-cloud.com -P 3306
+spring.datasource.url = jdbc:mysql://uvzhcd2glfgor9h0:LKYT0Hl7o9mQPw6M7vZo@bz3tkpasuhavec9oravp-mysql.services.clever-cloud.com:3306/bz3tkpasuhavec9oravp
 # Usuario y contraseña de la base datos
 spring.datasource.username = uvzhcd2glfgor9h0
 spring.datasource.password = LKYT0Hl7o9mQPw6M7vZo
