--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ springdoc.api-docs.path=/rest-api-docs
 springdoc.swagger-ui.path=/swagger-ui
 
 # Comma separated list of allowed origins
-app.cors.allowedOrigins = https://argentinaprograma-fronte-86e4e.web.app
+app.cors.allowedOrigins = https://argentinaprograma-fronte-86e4e.web.app, https://argentinaprograma-backend-2022.herokuapp.com
 
 profile.files.base.path =524288
 max.file.upload.size = /var/www/html/proyectointegrador/uploads
